Alterações de espaçamento

--- a/page.html
+++ b/page.html
@@ -23,11 +23,11 @@
             Viu os astros, e meus olhos <br>
             Choraram diante das cores <br>
             Que sulcavam a alma imberbe. <br>
-            Mas aquele já nem lembro. <br>
+            Mas aquele já nem lembro. 
         </div>
         </section>
 
-        <section>
+        <section id="dois">
         <div class="estrofe">
             Quando a luz se tornou tudo, <br>
             Voltei (nem vi) a ver nada. <br>
@@ -36,7 +36,7 @@
             Pintada num fundo azul, <br>
             Tão azul que era tristeza, <br>
             E aquela minha cegueira <br>
-            Era uma palmeira alta. <br>
+            Era uma palmeira alta. 
         </div>
         </section>
 
@@ -53,7 +53,7 @@
             É que nunca logrei fixar-me. <br>
             Diluído numa ampulheta, <br>
             Rodei dezessete vezes: <br>
-            Em lugar do alvo, o escuro. <br>
+            Em lugar do alvo, o escuro. 
         </div>
         </section>
 
@@ -70,7 +70,7 @@
             Dor excelsa, tédio em ápice, <br>
             As ruas nuas, tremendo, <br>
             Olhos lavados de inverno, <br>
-            Então descubro setembro. <br>
+            Então descubro setembro. 
         </div>
         </section>
 
@@ -85,7 +85,7 @@
             Será isso maturar? <br>
             Sofrer, transir, definhar, <br>
             E descobrir a esperança <br>
-            Na esfinge rude do tempo? <br>
+            Na esfinge rude do tempo? 
         </div>
         </section>
 
@@ -97,7 +97,7 @@
             Como um ano é como o outro. <br>
             Mas desse cume da noite <br>
             Já vejo que tudo muda <br>
-            Quando se vive setembro. <br>
+            Quando se vive setembro. 
         </div>
         </section>
     </main>
